# draw_flags

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.frontend  LICENSE  README.md  TODOs.txt  app.py  compose.yaml  pyproject.toml  run.sh  run_backend.sh  stuff_i_learned.txt
backend/: DEPLOYMENT.md  README.md  convert_to_onnx.py  lock_uv.sh  main.py  pyproject.toml  run_backend.sh  test_flag_searcher.py
backend/common/: flag_data.py
backend/data/: flags.json
backend/data/commons_plus_national/: flags.json
backend/data/national_flags/: embeddings.npy  embeddings.pt  flags.json
backend/models/: clip-text-encoder.onnx
backend/scripts/: convert_to_onnx.py  debug_clip_processing.py  debug_model_structure.py
backend/src/: clip_image_encoder.py  flag_searcher.py  image_processor.py  load_flags.py  minimal_tokenizer.py  utils.py
backend/tests/: convert_torch_to_numpy.py  speed_test_flag_searcher.py  test_cosine_similarity.py  test_deployment_env.py  test_flag_searcher.py  test_onnx.py
code_examples/: install_nodejs.sh
code_examples/backend/: main.py
code_examples/backend/src/: flag_searcher.py  utils.py
code_examples/frontend/src/: App.jsx
code_examples/frontend/src/components/: Flags.jsx  Fruits.jsx  ImageGrid.css  ImageUploader.jsx  SubmitDescriptionForm.jsx
common/: flag_data.py
data_mining/: README.md  get_info_from_wikipedia_flags.py  scrape_wikipedia_flags_by_design.py
data_mining/abandoned/: get_info_from_wikipedia_flags.py  scrape_wikipedia_flags_by_design.py
data_mining/national_flags/: pull_all_of_em.py  pull_national_flags.py  pull_north_american_flags.py
data_mining/post_processing/: just_commons.py  prepare_for_flag_searcher.py  process_downloaded_files.py  utils.py
data_mining/wikimedia-downloader/: README.md  async_set.py  downloader.py  http_status.py  utils.py
docs/: CNAME  index.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js
frontend/src/components/: Flags.jsx  ImageGrid.css  ImageGrid.jsx  ImageUploadForm.jsx  ImageUploader.jsx  SubmitDescriptionForm.jsx
install/: install_nodejs.sh  requirements.txt
notes/: TODOs.txt  notes.txt  stuff_i_learned.txt
scripts/: setup-env.sh
src/: flag_searcher.py  utils.py
sys/: setup_environment.sh
templates/: index.html
