# https://docs.astral.sh/ruff/configuration/
# https://docs.astral.sh/ruff/rules/

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 100
indent-width = 4

# Assume Python 3.9
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "YTT",
    "FBT",
    "A",
    "COM",
    "C4",
    "T10",
    "EXE",
    "ICN",
    "PIE",
    "Q",
    "RET",
    "SIM",
    "TID",
    "PTH",
    "TD",
    "FAST",
    "PERF",
    "FURB",
    "RUF",
]
ignore = [
    "COM812",
    "TD003",
    "TD004",
    "RET504",
    "UP006",
    "UP035",
    "N805",
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"


# Poetry stuff
[tool.poetry]
name = "draw_flags"
version = "0.1.0"
description = "Draw a flag, have it recognized"
authors = ["Ben Jafek <jafek91@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
aiohttp = "3.10.11"
rich = "^13.9.4"
cairosvg = "^2.7.1"
open-flags = "^0.0.2"
torch = "2.4.1"
sentence-transformers = "3.2.1"
scikit-learn = "1.3.2"
tqdm = "4.66.5"
uvicorn = "0.33.0"
levenshtein = "0.25.1"
coloredlogs = "15.0.1"
ruff = "^0.9.1"
pillow = "7.0.0"
fastapi = "0.115.6"
pydantic = "2.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
