[project]
name = "draw_flags"
version = "0.1.0"
description = "Draw a flag, have it recognized"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.3",
    "aiohttp==3.10.11",
    "rich>=13.9.4",
    "cairosvg>=2.7.1",
    "open-flags>=0.0.2",
    "sentence-transformers==3.2.1",
    "scikit-learn==1.3.2",
    "tqdm==4.66.5",
    "uvicorn==0.33.0",
    "levenshtein==0.25.1",
    "coloredlogs==15.0.1",
    "ruff>=0.9.1",
    "pillow==7.0.0",
    "fastapi==0.115.6",
    "pydantic==2.10.4",
]

