[project]
name = "draw_flags"
version = "0.1.0"
description = "Draw a flag, have it recognized"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.33.0",
    "pydantic==2.10.4",
    "pillow",
    "requests",
    "cairosvg>=2.7.1",
    "transformers>=4.35.0",
    "onnxruntime>=1.16.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.1",
    "pytest",
    "pytest-asyncio",
    "black",
    "mypy",
    "pre-commit",
    "sentence-transformers==3.2.1",
    "torch",
    "aiohttp==3.10.11",
    "rich>=13.9.4",
    "tqdm==4.66.5",
    "levenshtein==0.25.1",
    "coloredlogs==15.0.1",
    "onnx>=1.18.0",
    "scikit-learn==1.3.2",
]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "httpx",
]
